[gd_scene load_steps=18 format=2]

[ext_resource path="res://visuals/circle_bubble_inner.png" type="Texture" id=1]
[ext_resource path="res://scenes/gamepad.gd" type="Script" id=2]
[ext_resource path="res://visuals/SetaCalib.png" type="Texture" id=3]
[ext_resource path="res://scenes/WSClient.gd" type="Script" id=4]
[ext_resource path="res://visuals/Telas/TelaJogando.png" type="Texture" id=5]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Calibracao.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/AvaiableServers.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/EscolherMao.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/WindowControl.gd" type="Script" id=11]
[ext_resource path="res://visuals/fonts/BLKCHCRY.TTF" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=10]
size = 90
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Gamepad" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 11 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="WindowControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="AvaiableServers" parent="WindowControl" instance=ExtResource( 9 )]
visible = false

[node name="btConectar" type="Button" parent="WindowControl/AvaiableServers"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1501.0
margin_top = 43.0
margin_right = 1821.0
margin_bottom = 628.0

[node name="EscolherMao" parent="WindowControl" instance=ExtResource( 10 )]
visible = false

[node name="btMaoDireita" type="Button" parent="WindowControl/EscolherMao"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 95.0
margin_top = 59.0
margin_right = 908.0
margin_bottom = 1021.0

[node name="btMaoEsquerda" type="Button" parent="WindowControl/EscolherMao"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 960.0
margin_top = 59.0
margin_right = 1823.0
margin_bottom = 1025.0

[node name="TelaMaoSuporte" type="Control" parent="WindowControl"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg_rect" type="ColorRect" parent="WindowControl/TelaMaoSuporte"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )

[node name="CheckSuporteMao" type="CheckButton" parent="WindowControl/TelaMaoSuporte"]
margin_left = 716.0
margin_top = 158.0
margin_right = 792.0
margin_bottom = 255.0
rect_scale = Vector2( 6.29411, 6.29411 )

[node name="Lb_sup_mao" type="Label" parent="WindowControl/TelaMaoSuporte"]
margin_left = 644.0
margin_top = 177.0
margin_right = 1015.0
margin_bottom = 278.0
rect_scale = Vector2( 1.73143, 1.73143 )
text = "Suporte"
align = 1

[node name="bt_voltar" type="Button" parent="WindowControl/TelaMaoSuporte"]
margin_right = 456.0
margin_bottom = 211.0
text = "Voltar"

[node name="TelaLimiteHardware" type="Control" parent="WindowControl"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Calibracao" parent="WindowControl/TelaLimiteHardware" instance=ExtResource( 7 )]

[node name="lb_ang_min" type="Label" parent="WindowControl/TelaLimiteHardware"]
margin_left = 208.0
margin_top = 599.0
margin_right = 768.0
margin_bottom = 828.0
rect_rotation = -90.0
text = "Ângulo
Mínimo:"

[node name="LE_Min" type="LineEdit" parent="WindowControl/TelaLimiteHardware/lb_ang_min"]
margin_left = 112.295
margin_top = -11.0001
margin_right = 398.295
margin_bottom = 112.0
rect_scale = Vector2( 2.02344, 2.02344 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/read_only = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
text = "0"
align = 1

[node name="lb_ang_max" type="Label" parent="WindowControl/TelaLimiteHardware"]
margin_left = 1633.0
margin_top = 644.0
margin_right = 2216.0
margin_bottom = 873.0
rect_rotation = -90.0
text = "Ângulo
Máximo:"

[node name="LE_Max" type="LineEdit" parent="WindowControl/TelaLimiteHardware/lb_ang_max"]
margin_left = 153.0
margin_top = -2.0
margin_right = 439.0
margin_bottom = 121.0
rect_scale = Vector2( 2.02344, 2.02344 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/read_only = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
text = "180"
align = 1

[node name="Seta" type="Node2D" parent="WindowControl/TelaLimiteHardware"]
position = Vector2( 930, 904 )
rotation = -1.5708

[node name="Sprite" type="Sprite" parent="WindowControl/TelaLimiteHardware/Seta"]
position = Vector2( 0, -389 )
scale = Vector2( 5.53496, 5.53496 )
texture = ExtResource( 3 )

[node name="bt_voltar" type="Button" parent="WindowControl/TelaLimiteHardware"]
margin_left = 1464.0
margin_top = 749.0
margin_right = 1920.0
margin_bottom = 960.0
text = "Voltar"

[node name="TelaConectar" type="Control" parent="WindowControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg_rect" type="ColorRect" parent="WindowControl/TelaConectar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )

[node name="Control" type="Control" parent="WindowControl/TelaConectar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -524.0
margin_right = 276.0
margin_bottom = -148.0

[node name="ColorRect2" type="ColorRect" parent="WindowControl/TelaConectar/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WindowControl/TelaConectar/Control"]
margin_left = -582.0
margin_right = -14.0
margin_bottom = 113.0
text = "Ip do Servidor:"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="WindowControl/TelaConectar/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 186.0

[node name="TextEdit" type="LineEdit" parent="WindowControl/TelaConectar/Control/VBoxContainer"]
margin_right = 738.0
margin_bottom = 123.0
text = "192.168.15.12"

[node name="ConnectBtn" type="Button" parent="WindowControl/TelaConectar/Control/VBoxContainer"]
margin_top = 127.0
margin_right = 738.0
margin_bottom = 376.0
size_flags_vertical = 3
custom_styles/focus = SubResource( 9 )
text = "Conectar"

[node name="RunningGame" type="Control" parent="WindowControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="WindowControl/RunningGame"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )

[node name="PRINTLB" type="Label" parent="WindowControl/RunningGame/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -706.0
margin_top = 220.0
margin_right = 146.0
margin_bottom = 347.0
rect_scale = Vector2( 1.10404, 1.10404 )
align = 1

[node name="Label" type="Label" parent="WindowControl/RunningGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -700.0
margin_top = -107.5
margin_right = 700.0
margin_bottom = 107.5
rect_pivot_offset = Vector2( 700, 107 )
custom_styles/normal = SubResource( 1 )

[node name="circle_bubble_inner" type="Sprite" parent="WindowControl/RunningGame/Label"]
position = Vector2( 700, 107 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="WindowControl/RunningGame"]
anchor_right = 1.0
margin_right = 66.0
margin_bottom = 113.0
rect_scale = Vector2( 0.961636, 0.961636 )
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="WindowControl/RunningGame/MarginContainer"]
margin_left = 20.0
margin_right = 1966.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="WindowControl/RunningGame/MarginContainer/HBoxContainer"]
margin_right = 568.0
margin_bottom = 113.0
text = "Ip do Servidor:"
align = 1
valign = 1

[node name="ServerIP" type="Label" parent="WindowControl/RunningGame/MarginContainer/HBoxContainer"]
margin_left = 572.0
margin_right = 572.0
margin_bottom = 113.0
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="WindowControl/RunningGame/MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 576.0
margin_right = 579.0
margin_bottom = 113.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="WindowControl/RunningGame/MarginContainer/HBoxContainer"]
margin_left = 583.0
margin_right = 1060.0
margin_bottom = 113.0
text = "STATUS: "
align = 1
valign = 1

[node name="Status" type="Label" parent="WindowControl/RunningGame/MarginContainer/HBoxContainer"]
margin_left = 1064.0
margin_right = 1946.0
margin_bottom = 113.0
text = "DISCONNECTED"
align = 1
valign = 1

[node name="Menu" parent="WindowControl" instance=ExtResource( 6 )]
visible = false

[node name="btJogar" type="Button" parent="WindowControl/Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 145.0
margin_top = 129.0
margin_right = 534.0
margin_bottom = 953.0

[node name="btCalibrarMenu" type="Button" parent="WindowControl/Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 561.0
margin_top = 125.0
margin_right = 942.0
margin_bottom = 958.0

[node name="btMaos" type="Button" parent="WindowControl/Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 981.0
margin_top = 125.0
margin_right = 1331.0
margin_bottom = 953.0

[node name="btMainMenu" type="Button" parent="WindowControl/Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1379.0
margin_top = 124.0
margin_right = 1787.0
margin_bottom = 952.0

[node name="MainMenu" parent="WindowControl" instance=ExtResource( 8 )]
visible = false

[node name="btConectarMenu" type="Button" parent="WindowControl/MainMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 377.0
margin_top = 197.0
margin_right = 674.0
margin_bottom = 897.0

[node name="btTutorial" type="Button" parent="WindowControl/MainMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 711.0
margin_top = 190.0
margin_right = 1010.0
margin_bottom = 894.0

[node name="btCalibrar" type="Button" parent="WindowControl/MainMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1074.0
margin_top = 192.0
margin_right = 1374.0
margin_bottom = 890.0

[node name="btSobre" type="Button" parent="WindowControl/MainMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1480.0
margin_top = 193.0
margin_right = 1771.0
margin_bottom = 885.0

[node name="btSair" type="Button" parent="WindowControl/MainMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1786.0
margin_top = 821.0
margin_right = 1906.0
margin_bottom = 1066.0

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="WSClient" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="WindowControl/AvaiableServers/btConectar" to="WindowControl" method="EscolherMaoConectado"]
[connection signal="pressed" from="WindowControl/EscolherMao/btMaoDireita" to="WindowControl" method="EscolhidaMao"]
[connection signal="pressed" from="WindowControl/EscolherMao/btMaoEsquerda" to="WindowControl" method="EscolhidaMao"]
[connection signal="toggled" from="WindowControl/TelaMaoSuporte/CheckSuporteMao" to="." method="_on_CheckSuporteMao_toggled"]
[connection signal="pressed" from="WindowControl/TelaMaoSuporte/bt_voltar" to="WindowControl" method="_on_bt_voltar_MaoSup_pressed"]
[connection signal="pressed" from="WindowControl/TelaLimiteHardware/bt_voltar" to="WindowControl" method="_on_bt_voltar_calib_hard_pressed"]
[connection signal="pressed" from="WindowControl/TelaConectar/Control/VBoxContainer/ConnectBtn" to="." method="_on_ConnectBtn_pressed"]
[connection signal="pressed" from="WindowControl/TelaConectar/Control/VBoxContainer/ConnectBtn" to="WindowControl" method="_on_ConnectBtn_pressed"]
[connection signal="pressed" from="WindowControl/Menu/btJogar" to="WindowControl" method="btJogar"]
[connection signal="pressed" from="WindowControl/Menu/btCalibrarMenu" to="WindowControl" method="Calibrar"]
[connection signal="pressed" from="WindowControl/Menu/btMaos" to="WindowControl" method="reMao"]
[connection signal="pressed" from="WindowControl/Menu/btMainMenu" to="WindowControl" method="MainMenuVoltar"]
[connection signal="pressed" from="WindowControl/MainMenu/btConectarMenu" to="WindowControl" method="MenuConectar"]
[connection signal="pressed" from="WindowControl/MainMenu/btCalibrar" to="WindowControl" method="MenuCalibrar"]
[connection signal="pressed" from="WindowControl/MainMenu/btSair" to="WindowControl" method="SairApp"]
[connection signal="connected" from="WSClient" to="." method="_on_WSClient_connected"]
[connection signal="disconnected" from="WSClient" to="." method="_on_WSClient_disconnected"]
